--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="utf-8">
     <title>Your First Panel</title>
-    <script src="style.css"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-
     <!-- 2) A button -->
-    <button id="open-button">Öffnen</button>
+    <button id="color1"></button>
+    <button id="color2"></button>
+    <button id="color3"></button>
+    <button id="color4"></button>
+    <button id="color5"></button>
+    <button id="color6"></button>
+    <button id="color7"></button>
+    <button id="color8"></button>
+    <button id="color9"></button>
+    <button id="color10"></button>
+    <button id="color11"></button>
+    <button id="color12"></button>
+    <button id="color13"></button>
+    <button id="color14"></button>
+    <button id="color15"></button>
+    <button id="color16"></button>
+    
 
     <!-- 3) Add your script dependencies here, including CEP's CSInterface.js library -->
     <script type="text/javascript" src="CSInterface.js"></script>
