--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Your First Panel</title>
+    <title>Change Label Color</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <!-- 2) A button -->
     <button id="color1"></button>
     <button id="color2"></button>
     <button id="color3"></button>
@@ -24,9 +22,7 @@
     <button id="color14"></button>
     <button id="color15"></button>
     <button id="color16"></button>
-    
 
-    <!-- 3) Add your script dependencies here, including CEP's CSInterface.js library -->
     <script type="text/javascript" src="CSInterface.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="../host/index.jsx"></script>
